# python-project-50

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: python-app.yml
gendiff/: __init__.py
gendiff/commands/: gendiff.py  parse_file.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file2.yml
