[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Vitaly Chasovskikh"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"
pytest = "^8.2.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
